samples/operate-first/networkpolicys/m4d-connector-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: m4d
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: m4d
    app.kubernetes.io/version: latest
    helm.sh/chart: m4d-0.0.0
  name: m4d-connector-ingress
spec:
  ingress:
  - from:
    - podSelector: {}
  podSelector:
    matchLabels:
      m4d.ibm.com/componentType: connector
  policyTypes:
  - Ingress
